@@ -1,0 +1,18 @@
+/* 
+ * pic18f1320.c - PIC18F1320 Device Library Sources
+ * 
+ * This file is part of the GNU PIC Library.
+ * 
+ * May, 2005
+ * The GNU PIC Library is maintained by
+ *     Raphael Neider <rneider@web.de>
+ * 
+ * originally designed by
+ *     Vangelis Rokas <vrokas@otenet.gr>
+ * 
+ * $Id$
+ * 
+ */
+
+#include "pic18f1220.c" /* just line, but with 8KB code */
+
